Bug 470015 - Sub-label shown in too many places
Summary: Sub-label shown in too many places
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-19 18:03 UTC by Nate Graham
Modified: 2023-05-23 02:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.6
Sentry Crash Report:


Attachments
Huh, I wonder if it's Memorial Day (295.93 KB, image/jpeg)
2023-05-19 18:03 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-05-19 18:03:04 UTC
Created attachment 159117 [details]
Huh, I wonder if it's Memorial Day

See attached screenshot.

This is just a bit much. :) See also Bug 470014.
Comment 1 Bug Janitor Service 2023-05-20 02:55:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2941
Comment 2 Fushan Wen 2023-05-23 02:17:02 UTC
Git commit 0fac0baaa6283e4810b6df90ef22606af5679512 by Fushan Wen.
Committed on 23/05/2023 at 02:04.
Pushed by fusionfuture into branch 'master'.

Don't show holiday events under Gregorian date

Otherwise the label is shown in too many places.
FIXED-IN: 5.27.6

M  +26   -4    components/calendar/daysmodel.cpp
M  +0    -1    plasmacalendarintegration/holidaysevents.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0fac0baaa6283e4810b6df90ef22606af5679512