Don't show holiday events under Gregorian date

Otherwise the label is shown in too many places.

BUG: 470015
FIXED-IN: 5.27.6